--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All About Us</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1  style="text-align: center;">About Our Self</h1>
+        <h1 style="text-align: center;">About Our Self</h1>
         <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#aboutourself">About Our Self</a></li>
-                <li><a href="#ourlifestory">Our Lifestory</a></li>
-                <li><a href="#hobbies">Hobbies</a></li>
-                <li><a href="#favorates">Favorates</a></li>
-                <li><a href="#friends">Friends</a></li>
-            </ul>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#aboutourself">About Our Self</a></li>
+            <li><a href="#ourlifestory">Our Lifestory</a></li>
+            <li><a href="#hobbies">Hobbies</a></li>
+            <li><a href="#favorites">Favorites</a></li>
+            <li><a href="#friends">Friends</a></li>
+          </ul>
         </nav>
-    </header>
+      </header>
     <main>
         <article id="aboutourself">
             <h2>About Our Self</h2>
@@ -48,8 +50,8 @@
                 <img src="images/travel.jpg" alt="">
             </section>
         </article>
-        <article id="favorates">
-            <h2>Favorates</h2>
+        <article id="favorites">
+            <h2>Favorites</h2>
             <h3>Favorate food</h3>
             <img src="images/food.jpg" alt="Burger"><br><img src="images/food2.jpg" height="250" alt="Carbonara">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat maxime atque, nam quisquam blanditiis culpa quo quis non ipsam ab adipisci provident nemo deserunt! Nulla cupiditate magnam neque praesentium rem.</p>
@@ -60,8 +62,8 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat quisquam hic eligendi reprehenderit explicabo saepe nulla provident voluptates delectus deserunt libero enim quo qui dolorum ab labore, quia est possimus?</p>
         </article>
     </main>
-    <footer style="text-align: center;">
-        <p style="font-weight: bold;">All Rights Reserved &copy; Ancella Amor Benigay And Lae Anh Erma</p>
+    <footer>
+        <p style="text-align: center;">All Rights Reserved &copy; Ancella Amor Benigay And Lae Anh Erma</p>
         <a href="#top">Back to Top</a>
     </footer>
 </body>
